<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/printer_header">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="bluetooth"
            app:title="@string/bluetooth_title" />

        <org.miser.receiptprinter.preference.BluetoothDevicePreference
            app:dependency="bluetooth"
            app:key="bluetooth_device"
            app:title="@string/bluetooth_device_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/receipt_header">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="template"
            app:title="@string/template_title" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:dependency="template"
            app:key="template_merchant"
            app:summary="@string/template_merchant_summary"
            app:title="@string/template_merchant_title" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:dependency="template"
            app:key="template_custom"
            app:summary="@string/template_custom_summary"
            app:title="@string/template_custom_title" />

    </PreferenceCategory>

</PreferenceScreen>